[gd_scene load_steps=5 format=3 uid="uid://dci11hljs6gir"]

[ext_resource type="Script" path="res://mini_games/src/main.gd" id="1_6bcgi"]
[ext_resource type="Texture2D" uid="uid://cqjo8ei0x7r1h" path="res://mini_games/img/puzzle1.png" id="2_i5oce"]
[ext_resource type="Texture2D" uid="uid://c73bncgilnenb" path="res://mini_games/img/puzzlebg.png" id="3_upweg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qyiox"]
resource_local_to_scene = true
size = Vector2(1920, 1080)

[node name="Main" type="Area2D"]
script = ExtResource("1_6bcgi")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(960, 540)
shape = SubResource("RectangleShape2D_qyiox")

[node name="FullImage" type="Sprite2D" parent="."]
z_index = 1
z_as_relative = false
y_sort_enabled = true
position = Vector2(743.5, 542)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="move_counter" type="Label" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -679.0
offset_top = 104.0
offset_right = -194.0
offset_bottom = 159.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "test"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1512, 270)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_i5oce")

[node name="TileHolder" type="Node2D" parent="CanvasLayer" groups=["Tileholder"]]

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 1505.0
offset_top = 853.0
offset_right = 1542.0
offset_bottom = 884.0
text = "Exit"

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_upweg")
offset = Vector2(960, 540)

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
